--- a/src/components/Statelists.module.css
+++ b/src/components/Statelists.module.css
@@ -7,6 +7,7 @@
     margin-left: 5px;
     margin-right: 5px;
     text-align: center;
+    font-weight: "bold";
     border-bottom: white solid 1px;
     font-family: 'Roboto', sans-serif;
 }
