--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -2,6 +2,7 @@
 
 .myheader nav{
     background-color: #222222;
+    border-radius: 10px;
     color: white;
     margin: 5px;
     font-family: 'Roboto', sans-serif;
