--- a/src/components/Statelists.module.css
+++ b/src/components/Statelists.module.css
@@ -3,6 +3,7 @@
 
 .statelists {
     background-color: #222222;
+    border-radius: 10px;
     color: white;
     margin-left: 5px;
     margin-right: 5px;
