--- a/src/components/Totalcards.module.css
+++ b/src/components/Totalcards.module.css
@@ -3,6 +3,7 @@
 
 .Totalcards {
     background-color: #222222;
+    border-radius: 10px;
     color: white;
     margin: 5px;
     text-align: center;
