:construction: Fixed Horizontal Overflow issues

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -2,6 +2,8 @@
     background-color: #222222;
     border-radius: 10px;
     padding-top: .2rem;
+    padding-bottom: .2rem;
+    
 }
 
 .footer_container a {
